<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/padding_20"
    android:layout_marginTop="@dimen/padding_20"
    android:orientation="vertical"
    tools:context="com.example.admin.btloop.activity.AddQuestionActivity">


    <Button
        android:id="@+id/btn_level_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_20"
        android:layout_weight="1"
        android:background="@drawable/bg_btn_level"
        android:text="@string/level_1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <Button
        android:id="@+id/btn_level_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_20"
        android:layout_weight="1"
        android:background="@drawable/bg_btn_level"
        android:text="@string/level_2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <Button
        android:id="@+id/btn_level_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_20"
        android:layout_weight="1"
        android:background="@drawable/bg_btn_level"
        android:text="@string/level_3"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />
</LinearLayout>
